--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="sign_up">sign up</string>
     <string name="signup">Kayıt Ol</string>
     <string name="SignIn">Giriş Yap</string>
+    <string name="resim_ekle">resim ekle</string>
 </resources>
